Bug 601440 makes KeyScript() called after focus moved completely r=mkato+smichaud, a=blocking.11+